--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.4.3",
     "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
     "helmet": "^2.1.0",
     "mongoose": "^4.4.12"
